# atlas-c2pa-lib

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  build.rs
.github/workflows/: run-tests.yml  scorecard.yml
benches/: gpu_hash_benchmark.rs
src/: assertion.rs  asset_type.rs  cbor.rs  claim.rs  cose.rs  cross_reference.rs  datetime_wrapper.rs  ingredient.rs  lib.rs  manifest.rs
src/gpu/: README.md  context.rs  error.rs  ffi.rs  hasher.rs  mod.rs
src/gpu/sycl/: gpu_hash.cpp  gpu_hash.h
src/ml/: assertions.rs  ingredient.rs  manifest.rs  mod.rs  types.rs
tests/: test_dataset.rs  test_do_not_train_assertion.rs  test_linking_ingredients.rs  test_manifest.rs  test_manifest_cross_ref.rs  test_ml_manifest.rs  test_ml_types.rs
