[package]
name = "atlas-c2pa-lib"
edition = "2024"
version = "0.2.0"
description = "A Rust library for creating, signing, and verifying machine learning assets with C2PA"
authors = ["Intel Labs"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/IntelLabs/atlas-c2pa-lib"
documentation = "https://docs.rs/atlas-c2pa-lib"
readme = "README.md"
keywords = ["c2pa", "machine-learning", "provenance", "content-authenticity", "ml"]
categories = ["authentication", "cryptography", "science"]
build = "build.rs"

[features]
# Default features
default = []

# GPU-accelerated hashing using Intel Xe GPUs via SYCL/oneAPI
# Requires Intel oneAPI to be installed for compilation
# At runtime, requires Intel GPU drivers with Level Zero support
#
# Installation:
#   apt install intel-oneapi-compiler-dpcpp-cpp
#   source /opt/intel/oneapi/setvars.sh
#   cargo build --features gpu-hashing
gpu-hashing = []

# Enable all GPU optimizations
gpu-full = ["gpu-hashing"]

[dependencies]
serde = { version = "1.0.203", features = ["derive"] }
serde_cbor = "0.11"
serde_json = "1.0"
url = { version = "2.5.4", features = ["serde"] }
uuid = { version = "1.10.1", features = ["v4"] }
time = { version = "0.3.36", features = ["serde"] }
serde_with = { version = "3", features = ["time_0_3"] }
reqwest = { version = "0.12.5", features = ["blocking"] }
openssl = "0.10.72"
openssl-sys = "0.9.103"
ring = "0.17.12"
coset = "^0.4.0"
hex = "0.4"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
mockito = "1.7.0"
criterion = { version = "0.5", features = ["html_reports"] }

[build-dependencies]

#[[bench]]
#name = "gpu_hash_benchmark"
#harness = false
#required-features = ["gpu-hashing"]

[package.metadata.docs.rs]
# Document all features on docs.rs
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
