[package]
name = "atlas-c2pa-lib" 
edition = "2024"
version = "0.1.2"
description = "A Rust library for creating, signing, and verifying machine learning assets with C2PA"
authors = ["Intel Labs"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/IntelLabs/atlas-c2pa-lib"
documentation = "https://docs.rs/atlas-c2pa-lib"
readme = "README.md"
keywords = ["c2pa", "machine-learning", "provenance", "content-authenticity", "ml"]
categories = ["authentication", "cryptography", "science"]

[dependencies]
serde = { version = "1.0.203", features = ["derive"] }
serde_cbor = "0.11"
serde_json = "1.0"
url = { version = "2.5.4", features = ["serde"] }
uuid = { version = "1.10.1", features = ["v4"] }
time = { version = "0.3.36", features = ["serde"] }
serde_with = { version = "3", features = ["time_0_3"] }
reqwest = { version = "0.13.1", features = ["blocking"] }
openssl = "0.10.72"
openssl-sys = "0.9.103"
ring = "0.17.12"
coset = "^0.4.0"
hex = "0.4"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
mockito = "1.7.0"
